# jigdra

./: .env  README.md  docker-compose.yml
angular/: Dockerfile  angular.json  package-lock.json  package.json
angular/src/: styles.scss
flutter/: README.md  pubspec.yaml
flutter/lib/: jigdra.dart  jigdra_api.dart  jigdra_packages_provider.dart  main.dart
flutter/test/: jigdra_test.dart  widget_test.dart
flutter/web/: index.html  manifest.json
go-psql/: .gitignore  Dockerfile  README.md  auth.go  go.mod  go.sum  handler.go  main.go  wire.go  wire_gen.go
go-psql/database/: postgres.go
go-psql/handler/: workspace_user_handler.go
go-psql/middleware/: auth.go
go-psql/model/: workspace_user_service.go
go-psql/service/: workspace_user_service.go
go-psql/sql/: init.sh  init.sql  postgres.go
go-psql/task/: task_dto.go  task_handler.go  task_repository.go  task_service.go
go-psql/workspace/: workspace.go  workspace_facade.go  workspace_facade_handler.go  workspace_repository.go  workspace_service.go  workspace_user.go  workspace_user_dto.go  workspace_user_handler.go  workspace_user_repository.go  workspace_user_service.go  worspace.go
golang/: Dockerfile  Makefile  Readme.md  common_test.go  go.mod  go.sum  handler.go  handler_test.go  login_handler.go  login_handler_test.go  main.go  requests.http  tests.env  user_test.go  wire.go  wire_gen.go
golang/handler/: handler.go  jwt.go
golang/middleware/: auth.go
nestjs/: .env  Dockerfile  package-lock.json  package.json  tsconfig.json
rust/: Cargo.toml  Dockerfile  Rocket.toml
rust/src/: main.rs
(+150 files in other folders)
