[package]
name = "rust"
version = "0.1.0"
authors = ["szymonorz <originalemail001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
serde = "1.0.126"

[dependencies.mongodb]
version = "2.0.0-beta.2"
default-features = false
features = ["async-std-runtime"]